--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
         <ul class="navbar-right">
-          <i class="fa-solid fa-cart-shopping carrito"></i> <span class="badge">0</span>
+          <i class="fa-solid fa-cart-shopping" id="carrito"></i> <span class="badge">0</span>
           <!-- <li><a href="#" id="cart"><i class="fa fa-shopping-cart"></i> Cart <span class="badge">0</span></a></li> -->
         </ul>
       </div>
@@ -87,7 +87,9 @@
 
 
 
+<footer>
 
+</footer>
 
 
 
