--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="shortcut icon" href="/Imgs/variados/CS-sign.JPG" type="image/x-icon">
   <title>ChupeShop</title>
 </head>
 
@@ -21,7 +22,10 @@
   <!--  Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">ChupeShop</a>
+      <div class="simbolo">
+        <img src="/Imgs/variados/CS-sign.JPG" alt="">
+        <a class="navbar-brand" href="#">ChupeShop</a>
+      </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
         aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -53,64 +57,74 @@
           <i href="#" class="fa-solid fa-cart-shopping carrito" id="carrito"><span id="cart_menu_num carroNumero"
               data-action="cart-can" class="badge rounded-circle">0</span></i>
         </button>
+
       </div>
     </div>
   </nav>
   <!-- Fin Navbar -->
 
 
+  <h1 class="h1-contact">Contactate con nosotros!</h1>
 
-  <h1>Contactate con nosotros!</h1>
+  <div class="imgContact">
 
-
-
-  <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Nombre y Apellido</label>
-      <input type="text" class="form-control" placeholder="Ingresa nombre y apellido">
-    </div>
-
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">No compartiremos con nadie mas tu Email</small>
-
-    </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Mensaje</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Deseo que me envien correos con promociones</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
-  </form>
+    <img src="/Imgs/variados/contactanosCS.jpg" alt="">
+  </div>
 
 
 
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Carrito de compras</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body" id="carrito-body">
-           ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-primary">Finalizar compra</button>
-          </div>
+  <div class="formu">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Nombre y Apellido</label>
+        <input type="text" class="form-control" placeholder="Ingresa nombre y apellido">
+      </div>
+
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted">No compartiremos con nadie mas tu Email</small>
+
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Deseo que me envien correos con promociones</label>
+      </div>
+      <button type="button" class="btn btn-dark" id="btn-contacto">Enviar</button>
+    </form>
+  </div>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Carrito de compras</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="carrito-body">
+
+        </div>
+        <p id="precioTotal">
+
+        </p>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" id="finalizar-compra">Finalizar compra</button>
         </div>
       </div>
     </div>
-  
+  </div>
+
   <!-- Final Modal -->
+
 
   <footer class="footer-distributed">
 
