--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="shortcut icon" href="/Imgs/variados/CS-sign.JPG" type="image/x-icon">
   <title>ChupeShop</title>
 </head>
 
@@ -21,7 +22,10 @@
   <!--  Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
+      <div class="simbolo">
+        <img src="/Imgs/variados/CS-sign.JPG" alt="">
       <a class="navbar-brand" href="#">ChupeShop</a>
+    </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
         aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,7 +55,7 @@
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
           <i href="#" class="fa-solid fa-cart-shopping carrito" id="carrito"><span id="cart_menu_num carroNumero"
-              data-action="cart-can" class="badge rounded-circle">0</span></i>
+            data-action="cart-can" class="badge rounded-circle">0</span></i>
         </button>
 
       </div>
@@ -91,7 +95,7 @@
 
   <div id="cerveza"></div>
 
-
+<button id="nose"></button>
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -116,6 +120,10 @@
   </div>
 
 <!-- Final Modal -->
+
+
+
+
 
 
   <!-- Inicio Footer  -->
